ADD: article structure developed

--- a/tex-files/main.tex
+++ b/tex-files/main.tex
@@ -9,4 +9,10 @@
 
 \maketitle
 
+\input{introduction}
+\input{investigation}
+\input{task}
+\input{approximation}
+\input{conclusion}
+
 \end{document}
