NEW: add .bib file

--- a/tex-files/main.tex
+++ b/tex-files/main.tex
@@ -15,4 +15,8 @@
 \input{approximation}
 \input{conclusion}
 
+\bibliography{biblio}{}
+%\printbibliography[heading=subbibliography]
+\bibliographystyle{unsrtnat}
+
 \end{document}
