ENH: Introduction first ver added (from ITaS)

--- a/tex-files/format.tex
+++ b/tex-files/format.tex
@@ -6,4 +6,7 @@
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[russian]{babel}
+\usepackage{cite}
+
 \graphicspath{{../Pics/}}
+
