--- a/tex-files/introduction.tex
+++ b/tex-files/introduction.tex
@@ -1,2 +1,19 @@
 \section*{Аннотация}
 \section{Введение}
+
+Преобразование Хафа (ПХ) было изобретено Полом Хафом для анализа фотографий, полученных в пузырьковой камере, в 1959 году. Запатентовано же оно было автором в 1962 году \cite{Hough1962patent}. Важнейшим частным случаем ПХ является преобразование Хафа для прямых; ниже рассматривается только этот случай. Детали реализации преобразования в патенте были изложены довольно невнятно, возможно, намеренно. В том числе поэтому впоследствии алгоритм ПХ <<дорабатывался>> Р.О. Дудой и П.Е. Хартом. Основной претензией исследователей к исходной имплементации Хафа (с использованием <<школьного>> уравнения прямой) была потенциальная неограниченность массива аккумуляторов, вычисляющих результат преобразования. Следует заметить, что в исходном патенте были достаточно ясные указания о том, как преодолеть эту проблему, но вариант Дуды и Харта (с т.н. нормальным уравнением прямой), безусловно, выглядел более элегантным. Более подробно об этом направлении развития вопроса можно прочитать в \cite{Hart2009}. И только гораздо позже стало ясным, что в исходной параметризации алгоритм Хафа имеет быстрый способ вычисления, а в элегантной нормальной параметризации - напрямую нет.
+
+Преобразование Хафа - это популярный способ анализа в обработе изображений и компьютерном зрении. Можно указать множество применений ПХ, например, детектирование прямолинейных краев, определение ориентации документа, определение точек схождения \cite{NiksKarp2008} и др. Помимо прочего, преобразование Хафа успешно применяется в робастном регрессионном анализе  \cite{Goldenshluger, Ballester1994, bezm2012rus}.
+
+Математически преобразование Хафа - это дискретная форма преобразования Радона $\mathcal{R}$ (ПР):
+
+\begin{equation}\label{eq:radon}
+	\mathcal{R}f(L) = \int\limits_{L} f(x) |dx|,
+\end{equation}
+где $f$ - скалярная функция, $\Omega$ - область определения $f$ (к примеру, пространство координат изображения), $x \in \Omega \subset \mathbb{R}^2$, $L$ - прямая $L \subset \Omega$. Согласно уравнению (\ref{eq:radon}). Преобразование Радона для дискретного множества $\Omega$ - это преобразование Хафа. Стоит отметить, что в контексте практических задач прямая представляет собой линейный, кусочно-непрерывный отрезок, но, в угоду лаконичности, далее употребляется термин "прямая" или "паттерн".
+
+Оценим вычислительную сложность преобразования Хафа для скалярного (<<серого>>) квадратного изображения $\mathcal{I}$, которое может интерпретироваться как двумерный массив размера $n \cdot n$. В таком случае, число всевозможных дискретных прямых пропорционально $n^2$, причем длина прямой пропорциональна $n$, откуда следует, что вычислительная сложность в целом составляет $O(n^3)$. Тем не менее, существует быстрая схема вычисления ПХ, так называемое быстрое преобразование Хафа (БПХ). БПХ было изобретено в 1998 году М.Л. Брейди \cite{Brady1998}, но широкой известности не получило, а потому позже неоднократно переизобреталось \cite{NiksKarp2004rus, Fred2005}. Вычислительная сложность БПХ -  $O(n^2 \log{n})$ для квадратного изображения с линейным размером $n$. Более того, вычисление БПХ не вовлекает комплексную арифметику и может быть проведено целочисленно. Однако на практике было замечено, что диадические паттерны, используемые в алгоритме БПХ, аппроксимируют идеальные прямые с некоторой неточностью, которая растет линейно с логарифмом от размера изображения.
+
+В данной работе рассматривается ошибка аппроксимация геометрически идеальной прямой диадическими паттернами. Ввиду возрастающего интереса к БПХ проблема точности становится все более существенной, что и является мотивацией для исследования данного вопроса. В данной работе будет предложена новая аналитическая форма представления диадических паттернов, получены теоретические и эмпирические оценки ошибки аппроксимации идеальных прямых диадическими, а также показана взаимосвязь между структурой ошибки аппроксимации и последовательностью Якобшталя.
+
+Статья состоит из трех глав. В первой главе приводится описание структуры диадических прямых и классический способ их построения. Во второй главе изложены результаты эмпирических исследований, приведена визуализация ошибки аппроксимации диадическими прямыми. В третьей главе предложены теоретические оценки ошибки аппроксимации в зависимости от размера изображения, а также показана связь структуры ошибки с числами Якобшталя.
