--- a/tex-files/main.tex
+++ b/tex-files/main.tex
@@ -17,6 +17,6 @@
 
 \bibliography{biblio}{}
 %\printbibliography[heading=subbibliography]
-\bibliographystyle{unsrtnat}
+\bibliographystyle{plain}
 
 \end{document}
