ENH: add Donoho article to .bib file

--- a/tex-files/biblio.bib
+++ b/tex-files/biblio.bib
@@ -585,3 +585,28 @@ pages = {193-214}
     language={russian},
     hyphenation={russian},
 }
+
+@ARTICLE{Edholm1987,
+	author = {P. Edholm,, G.T. Herman},
+	title = {Linograms in image reconstruction from projections},
+	journal = {IEEE Trans. Medical Imaging},
+	volume={MI-6(4)},
+	pages = {301-307},
+	year = {1987}
+}
+
+@ARTICLE{Edholm1988,
+	author = {P. Edholm,, G.T. Herman,, D.A. Roberts},
+	title = {Image reconstruction from linograms: Implementation and evaluation},
+	journal = {IEEE Trans. Medical Imaging},
+	volume={MI-7(3)},
+	pages = {239-246},
+	year = {1988}
+}
+
+@ARTICLE{Donoho,
+	author = {Averbuch, A.,, Coifman, R. R.,, Donoho, D. L.,, Israeli, M.,, & Waldén, J. },
+	title = {A notion of Radon transform for data in a Cartesian grid, which is rapidly computable, algebraically exact, geometrically faithful and invertible},
+	journal = {SIAM Scientific Computing},
+	year = {2001}
+}
