ADD/ENH: few articles, modified introduction

--- a/tex-files/biblio.bib
+++ b/tex-files/biblio.bib
@@ -604,9 +604,35 @@ pages = {193-214}
 	year = {1988}
 }
 
-@ARTICLE{Donoho,
+@ARTICLE{Donoho2001,
 	author = {Averbuch, A.,, Coifman, R. R.,, Donoho, D. L.,, Israeli, M.,, & Waldén, J. },
 	title = {A notion of Radon transform for data in a Cartesian grid, which is rapidly computable, algebraically exact, geometrically faithful and invertible},
 	journal = {SIAM Scientific Computing},
 	year = {2001}
+}
+
+@ARTICLE{Brady92,
+	author = {Brady, M. L.,, Yong, W.},
+	title = {Fast parallel discrete approximation algorithms for the Radon transform},
+	journal = {In Proceedings of the fourth annual ACM symposium on Parallel algorithms and architectures. ACM.},
+	pages = {91-99},
+	year = {1992}
+}
+
+@ARTICLE{Gotz1995,
+	author = {Götz, W. A.,, H. J. Druckmüller},
+	title = {A fast digital Radon transform—An efficient means for evaluating the Hough transform.},
+	journal = {Pattern Recognition},
+	volume = {28.12}
+	pages = {1985-1992},
+	year = {1995}
+}
+
+@ARTICLE{Brandt1999,
+	author = {Brandt, Achie,, Jonatan Dym},
+	title = {Fast calculation of multiple line integrals},
+	journal = {SIAM Journal on Scientific Computing},
+	volume = {20.4},
+	pages = {1417-1429},
+	year = {1999}
 }
