NEW/ENH: add related papers, modified introduction

--- a/tex-files/introduction.tex
+++ b/tex-files/introduction.tex
@@ -36,11 +36,16 @@
 Более того, вычисление БПХ не вовлекает комплексную арифметику и может быть проведено целочисленно. 
 Однако на практике было замечено, что диадические паттерны, используемые в алгоритме БПХ, аппроксимируют идеальные прямые с некоторой неточностью, которая растет линейно с логарифмом от размера изображения.
 
-В данной работе рассматривается ошибка аппроксимация геометрически идеальной прямой диадическими паттернами. 
-Ввиду возрастающего интереса к БПХ проблема точности становится все более существенной, что и является мотивацией для исследования данного вопроса. 
-В данной работе будет предложена новая аналитическая форма представления диадических паттернов, получены теоретические и эмпирические оценки ошибки аппроксимации идеальных прямых диадическими, а также показана взаимосвязь между структурой ошибки аппроксимации и последовательностью Якобшталя.
+Ввиду возрастающего интереса к БПХ проблема точности становится все более существенной, что и является мотивацией для исследования данного вопроса.
+Основным результатом является доказательство теоремы об оценке верхней границы ошибки аппроксимации идеальной прямой диадическим паттерном.
+Показано, что данная ошибка прямо пропорциональна $O(k/6)$, где $k = \log(n)$. 
+Показана связь между моделью максимальной ошибки аппроксимации диадическим паттерном и моделью Изинга одномерного антиферомагнетика с нелокальным взаимодействием.
+Предложена новая аналитическая форма представления диадических паттернов, показана взаимосвязь между структурой ошибки аппроксимации и последовательностью Якобшталя.
+Приведены эмпирические оценки дисперсии ошибки аппроксимации в зависимости от размера изображения.
+С целью исследовать возможность увеличить точность преобразования изучена ошибка аппроксимации для других типов разбиения пространства: на три части, а так же последовательностью Фибоначчи.
 
-Статья состоит из трех глав. 
-В первой главе приводится описание структуры диадических прямых и классический способ их построения. 
-Во второй главе изложены результаты эмпирических исследований, приведена визуализация ошибки аппроксимации диадическими прямыми. 
+Статья состоит из трех глав.
+В первой главе приводятся эмпирические исследования точностьи БПХ, а так же исследование альтернативных схем разделения пространства.
+Во второй главе приводится формацлизация модели ошибки аппроксимации хафа, обосновывается связь этой модели с моделью Изинга для одномерных антиферомагнетиков с нелокальным взаимодействием.
 В третьей главе предложены теоретические оценки ошибки аппроксимации в зависимости от размера изображения, а также показана связь структуры ошибки с числами Якобшталя.
+В четвертой главе приводится доказательство теоремы об оценке ошибки аппроксимации.
